Dodanie ikonek X do wyswietlania list i znajomych na mój profil

--- a/UserProfiles/templates/profile/profile.html
+++ b/UserProfiles/templates/profile/profile.html
@@ -91,7 +91,7 @@
     background-color: rgba(128, 128, 128, 0.7);">
     <div style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);z-index: 3">
         <a href="/profile/{{ user_username }}/">
-            <button>Powrót</button>
+            <button type="button" class="btn-close " aria-label="Close"></button>
         </a>
         <div class="event-schedule-area-two profileListScroll">
             <div class="row">
