Poprawki: dodanie marginow do tytułow podstron

--- a/WishLists/templates/myGiftReservations.html
+++ b/WishLists/templates/myGiftReservations.html
@@ -1,7 +1,7 @@
 {% extends "main/base.html" %}
 
 {% block content %}
-<h1 class="reservationsTitle">
+<h1 class="pageTitle">
     <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor"
          class="bi bi-card-checklist"
          viewBox="0 0 16 16">
