podstrona z zaproszeniami do znajomych + dodanie opcji do menu

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -78,6 +78,11 @@
 								</span>
         </button>
         <div class="dropdown-menu" aria-labelledby="triggerId">
+            <a href="/friend-invites/">
+                <button class="dropdown-item">
+                    Zaproszenia
+                </button>
+            </a>
             <a href="/logout/">
                 <button class="dropdown-item">
                     Wyloguj
