--- a/WishLists/templates/myLists.html
+++ b/WishLists/templates/myLists.html
@@ -55,7 +55,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <div class="text-center">
+                                    <div class="text-center" style="color: #cf057c;">
                                         <h5>{{ lista.tytul }}</h5>
                                     </div>
                                 </td>
@@ -75,7 +75,7 @@
                                             <div class="col-sm-4">
                                                 <form method="POST" action="{% url 'specificList' lista.id %}">
                                                     {% csrf_token %}
-                                                    <button id="poNajechaniuPurple">
+                                                    <button class="buttonMagenta">
                                                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
                                                              class="bi bi-card-text" viewBox="0 0 16 16">
                                                             <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2z"/>
@@ -87,7 +87,7 @@
                                             <div class="col-sm-4">
                                                 <form method="POST" action="{% url 'edit_list' lista.id %}">
                                                     {% csrf_token %}
-                                                    <button id="poNajechaniuGreen">
+                                                    <button class="buttonGreen">
                                                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
                                                              class="bi bi-pencil-square" viewBox="0 0 16 16">
                                                             <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
@@ -98,7 +98,7 @@
                                                 </form>
                                             </div>
                                             <div class="col-sm-4">
-                                                <button type="button" id="poNajechaniuRed" data-bs-toggle="modal" data-bs-target="#confirmDeleteListModal" data-listid="{{ lista.id }}">
+                                                <button type="button" class="buttonRed" data-bs-toggle="modal" data-bs-target="#confirmDeleteListModal" data-listid="{{ lista.id }}">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
                                                           class="bi bi-trash" viewBox="0 0 16 16">
                                                         <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
