--- a/UserProfiles/templates/profile/profile.html
+++ b/UserProfiles/templates/profile/profile.html
@@ -139,7 +139,7 @@
                                                     <div class="col-sm-4">
                                                         <form method="POST" action="{% url 'specificList' lista.id %}">
                                                             {% csrf_token %}
-                                                            <button id="poNajechaniuPurple">
+                                                            <button class="buttonMagenta">
                                                                 <svg xmlns="http://www.w3.org/2000/svg" width="32"
                                                                      height="32" fill="currentColor"
                                                                      class="bi bi-card-text" viewBox="0 0 16 16">
