--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,8 @@
 	 font-family: Verdana, sans-serif;
 }
 
+/* MENU */
+
 .navbar-collapse img{
 	width: 3.5%;
 	height: 3.5%;
@@ -36,32 +38,6 @@
     padding: 0px 10px;
 }
 
-.witaj{
-    margin-top: 5%;
-    margin-bottom: 5%;
-    text-align: center
-}
-
-#opis{
-    padding-left: 5%;
-    padding-right: 5%;
-    text-align: center;
-}
-
-.przyciskWelcome{
-    margin-right: 5%;
-    margin-left: 5%;
-    background-color: #0096C7;
-    color: white;
-    border: 1px solid #0096C7;
-}
-
-.przyciskWelcome:hover{
-    background-color: #023E8A;
-    color: white;
-    border: 1px solid #023E8A;
-}
-
 nav{
     background-color: #023E8A;
 }
@@ -81,70 +57,6 @@ nav{
     font-weight: bold;
     color: #FF3333;
     border: 2px solid #FF3333;
-}
-
-
-#brakList{
-    font-style: italic;
-    color: red;
-}
-
-
-#listy ul{
-    list-style: none;
-}
-
-#pojedynczaLista{
-    border: 2px solid black;
-    border-radius: 8px;
-    padding: 15px;
-    margin-bottom: 8%;
-    box-shadow: 10px 10px 20px rgba(0,0,0,0.7);
-    background-color: #CAF0F8;
-}
-
-#przyciskiMojeListy{
-    text-align: center;
-}
-
-#przyciskiMojeListy button{
-    border: none;
-    background-color: #CAF0F8 !important;
-    margin-top: 8%;
-}
-
-#poNajechaniuPurple:hover{
-    color: purple;
-}
-
-#poNajechaniuGreen:hover{
-    color: green;
-}
-
-#poNajechaniuRed:hover{
-    color: red;
-}
-
-#brakList{
-    text-align: center;
-}
-
-.przyciskBrakList{
-    text-decoration: none;
-}
-
-#guzikAddPresent{
-    margin-bottom: 2%;
-}
-
-.witaj2{
-    margin-top: 5%;
-    margin-bottom: 2%;
-}
-
-#przyciskiListy button{ /* delete */
-    border: none;
-    background-color: white !important;
 }
 
 .hidden{
